# mc-nt

./: CMakeLists.txt  configure  configure.in  mc.prj  mkinstalldirs  readme.os2  specfile
edit/: New Text Document.txt
pc/: CMakeLists.txt  GDB.EXE.stackdump  Makefile.PC  NC.MNU  bugs  config.h  debug_mc.bat  key_nt.c  keyboard.h  libintl.h  make_mc_debug.bat  make_mc_release.bat  makefile.bc5  makefile.min  mc.rc  shell.cpp  shell.h  slint_pc.c  util_nt.c  util_win32.c
pc/gnu/: stubs.h
po/: mc.pot
slang/: CMakeLists.txt  slw32tty.c
src/: CMakeLists.txt  cmd.c  color.c  command.c  dialog.c  dir.c  dlg.c  ext.c  file.c  help.c  key.c  layout.c  listmode.c  main.c  mc.hlp  menu.c  mouse.c  profile.c  regex.c  screen.c  setup.c  tree.c  user.c  util.c  view.c  widget.c  win.c  wtools.c
