PROJECT(mc)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0)

SET(CMAKE_CXX_FLAGS "/O2 /nologo /W3 /wd4996 /EHsc")
SET(CMAKE_BUILD_TYPE "Release")
ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
ADD_DEFINITIONS(-D_SCL_SECURE_NO_WARNINGS)
ADD_DEFINITIONS(-DHAVE_CONFIG_H)
ADD_DEFINITIONS(-DMC_NT)
ADD_DEFINITIONS(-DOS2_NT)
INCLUDE_DIRECTORIES(pc slang)
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(pc)
ADD_SUBDIRECTORY(slang)
ADD_SUBDIRECTORY(edit)
